--- a/src/output.css
+++ b/src/output.css
@@ -565,9 +565,6 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
-  .z-5 {
-    z-index: 5;
-  }
   .z-30 {
     z-index: 30;
   }
@@ -774,6 +771,9 @@
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
+  }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
@@ -869,6 +869,9 @@
   .border-white\/10 {
     border-color: color-mix(in oklab, var(--color-white) 10%, transparent);
   }
+  .border-white\/20 {
+    border-color: color-mix(in oklab, var(--color-white) 20%, transparent);
+  }
   .border-white\/40 {
     border-color: color-mix(in oklab, var(--color-white) 40%, transparent);
   }
@@ -907,6 +910,12 @@
   }
   .bg-rose-400\/80 {
     background-color: color-mix(in oklab, var(--color-rose-400) 80%, transparent);
+  }
+  .bg-rose-500 {
+    background-color: var(--color-rose-500);
+  }
+  .bg-rose-500\/70 {
+    background-color: color-mix(in oklab, var(--color-rose-500) 70%, transparent);
   }
   .bg-rose-600 {
     background-color: var(--color-rose-600);
@@ -994,6 +1003,9 @@
   .py-24 {
     padding-block: calc(var(--spacing) * 24);
   }
+  .pt-4 {
+    padding-top: calc(var(--spacing) * 4);
+  }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
@@ -1064,9 +1076,6 @@
   }
   .text-wrap {
     text-wrap: wrap;
-  }
-  .text-black {
-    color: var(--color-black);
   }
   .text-gray-500 {
     color: var(--color-gray-500);
@@ -1183,6 +1192,11 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .transition-colors {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
   .duration-250 {
     --tw-duration: 250ms;
     transition-duration: 250ms;
@@ -1213,13 +1227,6 @@
     &:hover {
       @media (hover: hover) {
         background-color: color-mix(in oklab, var(--color-pink-100) 10%, transparent);
-      }
-    }
-  }
-  .hover\:bg-rose-100 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-rose-100);
       }
     }
   }
@@ -1450,6 +1457,11 @@
   .lg\:m-12 {
     @media (width >= 64rem) {
       margin: calc(var(--spacing) * 12);
+    }
+  }
+  .lg\:flex {
+    @media (width >= 64rem) {
+      display: flex;
     }
   }
   .lg\:hidden {
