--- a/src/input.css
+++ b/src/input.css
@@ -39,3 +39,18 @@ body {
     display: flex !important;
   }
 }
+
+
+#hits-dropdown {
+  width: 100%;
+  min-width: inherit;
+}
+#searchbox {
+  position: relative;
+}
+#hits-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 50;
+}
